--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <p>Toda mi experiencia laboral anterior es relativa a trabajos que no requerían titulación y no
                             guardan relación con mi actual formación.</p>
                            <p> No obstante, todos ellos han sido duraderos y estables, debido a mi actitud responsable.
-                            Desde hace unos años pude empezar a formarme en lo que realmente es mi pasión, el desarrollo
+                            Afortunadamente, desde hace unos años pude empezar a formarme en lo que realmente es mi pasión, el desarrollo
                             web.</p>
                            <p> Un sector en el que sin duda doy lo mejor de mí mismo, al que me gustaría dedicarme por
                             completo y demostrar lo mucho que puedo aportar.</p>
