--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             </div>
         </section>
-
+        <hr class="m-0" />
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
