add phone number

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 </h1>
                 <div class="subheading mb-5">
                     Calle Berenguer de Montoliu nº6, 1º Derecha
-                    <a href="mailto:me@piterxus.dev">me@piterxus.dev</a>
+                    <a href="mailto:me@piterxus.dev">me@piterxus.dev</a><br>
+                    Teléfono de contacto: 600563136
                 </div>
                 <p class="lead mb-5">Soy una persona resolutiva y creativa. Dispuesta siempre a entregar todo de mí. Me
                     apasiona todo lo relativo al desarrollo web, tratando siempre de encontrar un enfoque diferente.
